--- a/examples/NavigationPlayground/package.json
+++ b/examples/NavigationPlayground/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@exponent/vector-icons": "~4.0.0",
     "exponent": "~13.1.0",
+    "faker": "^4.0.0",
     "react": "~15.4.2",
     "react-native": "github:exponent/react-native#sdk-13.0.0",
     "react-native-vector-icons": "^4.0.0"
